add some references to 2.4

--- a/main.bib
+++ b/main.bib
@@ -35,6 +35,20 @@
 MRREVIEWER = {E. Dyer},
 }
 
+@book {AdamsInfiniteLoopSpaces,
+    AUTHOR = {Adams, John Frank},
+     TITLE = {Infinite loop spaces},
+    SERIES = {Annals of Mathematics Studies},
+    VOLUME = {90},
+ PUBLISHER = {Princeton University Press, Princeton, N.J.; University of
+              Tokyo Press, Tokyo},
+      YEAR = {1978},
+     PAGES = {x+214},
+      ISBN = {0-691-08207-3; 0-691-08206-5},
+   MRCLASS = {55-02 (55N20 55P47)},
+  MRNUMBER = {505692},
+MRREVIEWER = {Stewart B. Priddy},
+}
 
 @article {Ando,
     AUTHOR = {Ando, Matthew},
@@ -928,6 +942,27 @@ MRREVIEWER = {J. Dieudonn{\'e}},
    MRCLASS = {55-02 (55Sxx)},
   MRNUMBER = {738973},
 MRREVIEWER = {Andrzej Kozlowski},
+}
+
+@book {MayAlaskaNotes,
+    AUTHOR = {May, J. P. and and and and and and and and and },
+     TITLE = {Equivariant homotopy and cohomology theory},
+    SERIES = {CBMS Regional Conference Series in Mathematics},
+    VOLUME = {91},
+      NOTE = {With contributions by M. Cole, G. Comeza\~na, S. Costenoble, A.
+              D. Elmendorf, J. P. C. Greenlees, L. G. Lewis, Jr., R. J.
+              Piacenza, G. Triantafillou, and S. Waner},
+ PUBLISHER = {Published for the Conference Board of the Mathematical
+              Sciences, Washington, DC; by the American Mathematical
+              Society, Providence, RI},
+      YEAR = {1996},
+     PAGES = {xiv+366},
+      ISBN = {0-8218-0319-0},
+   MRCLASS = {55P91 (18G99 55N91 55U35)},
+  MRNUMBER = {1413302},
+MRREVIEWER = {Ian Hambleton},
+       DOI = {10.1090/cbms/091},
+       URL = {http://dx.doi.org/10.1090/cbms/091},
 }
 
 @incollection {MillerBernoulliNos,
