--- a/quillen.tex
+++ b/quillen.tex
@@ -727,8 +727,8 @@ The picture Quillen paints of all this is considerably different from ours.  He 
 The chain model for $H\F_2$--homology is actually also rigid enough to define power operations, and somewhat curiously these operations automatically turn out to be additive, without passing to the Tate construction.  In particular, this means that they are recognizable in terms of classical Steenrod operations.  Specifically, the $C_2$--construction \[\{\Susp^n \Susp^\infty_+ X \xrightarrow{f} H\F_2\} \xrightarrow{P^{C_2}} \{\Susp^{2n} \Susp^\infty_+ X \sm \Susp^\infty_+ BC_2 \xrightarrow{P^{C_2}(f)} H\F_2\}\] gives a class in $H\F_2^{2n-*}(X) \otimes H\F_2^*(\RP^\infty)$, which decomposes as \[P^{C_2}(f) = \sum_{j=0}^{2n} \Sq^{2n-j}(f) \otimes x^j.\]  The Adem relations can be extracted by studying the wreath product $\Sigma_2 \wr \Sigma_2$ and the compositional identity for power operations.
 \end{example}
 
-\begin{remark}
-Since the failure of the power operations to be additive was a consequence of the binomial formula, it is somewhat intuitive that modulo $2$, where $(x + y)^2 \equiv x^2 + y^2$, that this operation becomes stable.  In fact, more than this is true: if an $H_\infty$ ring spectrum $E$ has $\pi_0 = \F_p$, it must be the case that $E = H\F_p$.
+\begin{remark}[{\cite[Theorems III.4.1-3, Remark III.4.4]{BMMS}}]
+Since the failure of the power operations to be additive was a consequence of the binomial formula, it is somewhat intuitive that modulo $2$, where $(x + y)^2 \equiv x^2 + y^2$, that this operation becomes stable.  In fact, more than this is true: for instance, if an $H_\infty$ ring spectrum $E$ has $\pi_0 E = \F_p$, it must be the case that $E$ is an $H\F_p$--algebra.  This fact also gives an inexplicit means to recover \Cref{MOSplitsIntoHF2s}.
 \end{remark}
 
 
