note on beefing up 2.2

--- a/quillen.tex
+++ b/quillen.tex
@@ -233,7 +233,7 @@ Consider the formal group law $x_1(t_1) +_{\G_m} x_2(t_2) = t_1 + t_2 - t_1 t_2$
 
 \section{Divisors on formal curves}\label{CurveDivisorsSection}
 
-\todo{I think this section is a little short. Maybe we could expand the proof of the comparison between Cartier and Weil divisors at the end? Or we would include a proof of the universality of the divisor scheme?  Something to give this a little more meat, anyway.}
+\todo{I think this section is a little short. Maybe we could expand the proof of the comparison between Cartier and Weil divisors at the end? Or we would include a proof of the universality of the divisor scheme?  We could talk about divisors and line bundles on complex curves, culminating in the observation that principal divisors appear as subsheaves of the sheaf of meromorphic functions and that every divisor is locally principal.  Something to give this a little more meat, anyway.}
 
 We continue to develop vocabulary and accompanying machinery used to give algebro-geometric reinterpretations of the results in the introduction to this Case Study.  In the previous section we deployed the language of formal schemes to recast \Cref{CPinftyNiceCalculation} in geometric terms, and we now turn towards reencoding \Cref{ThomIsomOverC}.  In \Cref{DefnQCohSheaves} and \Cref{CorrespondenceQCohAndModules} we discussed a general correspondence between $R$--modules and quasicoherent sheaves over $\Spec R$, and the isomorphism of $1$--dimensional $E_* X$--modules appearing in \Cref{ThomIsomOverC} moves us to study sheaves over $X_E$ which are $1$--dimensional --- i.e., line bundles.  In fact, for the purposes of \Cref{ThomIsomOverC}, we will find that it suffices to understand the basics of the geometric theory of line bundles \emph{just over formal curves}.  This is our goal in this Lecture, and we leave the applications to algebraic topology aside for later.  For the rest of this section we fix the following three pieces of data: a base formal scheme $S$, a formal curve $C$ over $S$, and a distinguished point $\zeta\co S \to C$ on $C$.
 
@@ -1070,10 +1070,6 @@ Combine \Cref{OrientationsOnEAndMU} and \Cref{QuillensTheorem}.
 % where $p: E \to X$ is the projection and $E_0$ is the image of the zero section.
 
 % The wrong--way maps come from conjugating by Poincar\'e duality: \[E^* X \cong E_{d_X-*} X \to E_{d_X-*} Y \cong E^*{*-d_X+d_Y} Y.\]  Poincar\'e duality comes from asserting that the stable normal bundle is oriented for the theory, and then Atiyah duality says \[D(X_+) \simeq \Susp^{-n} T(\nu) [\simeq T(\nu - n\eps) \simeq T(-\tau)]. \]
-
-% ------
-
-% Q: Once you know that $MU$ has the universal formal group law on it, does the description of $MU_* MU$ follow immediately from evenness?  Probably?\todo{No, it follows from \emph{freeness}, and this should go into the operations/model section.}
 
 % -----
 
