--- a/sigma.tex
+++ b/sigma.tex
@@ -337,7 +337,7 @@ upon which there is the additional ``Jacobi'' relation \[A^4 = B^4 + C^4.\]
 This embedding of $E_\Lambda$ as an intersection of quadric surfaces in $\CP^3$ is quite different from the Weierstrass embedding.  Nonetheless, the embeddings are analytically related.  Namely, there is an equality \[\frac{d^2}{dz^2} \log \theta_{\exp{2 \pi i \tau}}(\exp{2 \pi i z}) = \wp_\Lambda(z).\]  Separately, Weierstrass considered a function $\sigma_\Lambda$, defined by \[\sigma_\Lambda(z) = z \prod_{\omega \in \Lambda \setminus 0} \left( 1 - \frac{z}{\omega} \right) \cdot \exp \left[ \frac{z}{\omega} + \frac{1}{2} \left( \frac{z}{\omega} \right)^2 \right],\] which also has the property that its second logarithmic derivative is $\wp$ and so is ``basically $\theta_q^{1/2,1/2}$''.  In fact, any elliptic function can be written in the form \[c \cdot \prod_{i=1}^n \frac{\sigma_\Lambda(z - a_i)}{\sigma_\Lambda(z - b_i)}.\]
 \end{remark}
 
-The $\theta$--functions version of the story has two main successes.  \todo{What's the other success?}One is that there is a version of this story for an arbitrary abelian variety.  It turns out that all abelian varieties are projective\citeme{Milne's abelian varieties, Theorem 7.1}, and the theorem sitting at the heart of this claim is\todo{Several people wanted some sketch of how to use this theorem to prove the projectivity thing. I don't have any good sketch, and neither did Erick (offhand).}\todo{Mike summarizes the Theorem of the Cube in his \textit{The $\String$ orientation of $\tmf$} talk notes (pg.\ 113) as: a weight zero divisor $D$ on an abelian variety is principal (i.e., it is the zeroes and poles set of a meromorphic function) if and only if its nodes sum to zero.  The meromorphic function is unique up to scale, so it's actually unique if you require a compatible trivialization at the identity point (i.e., if you divide by $\pi^* e^* \sheaf O$).}
+The $\theta$--functions version of the story has two main successes\todo{Two successes: (1) abelian variety $A$ rather than elliptic curve $C$; (2) whatever field $K$ rather than the complex numbers $\C$.}.  One is that there is a version of this story for an arbitrary abelian variety.  It turns out that all abelian varieties are projective\citeme{Milne's abelian varieties, Theorem 7.1}, and the theorem sitting at the heart of this claim is\todo{Several people wanted some sketch of how to use this theorem to prove the projectivity thing. I don't have any good sketch, and neither did Erick (offhand).}\todo{Mike summarizes the Theorem of the Cube in his \textit{The $\String$ orientation of $\tmf$} talk notes (pg.\ 113) as: a weight zero divisor $D$ on an abelian variety is principal (i.e., it is the zeroes and poles set of a meromorphic function) if and only if its nodes sum to zero.  The meromorphic function is unique up to scale, so it's actually unique if you require a compatible trivialization at the identity point (i.e., if you divide by $\pi^* e^* \sheaf O$).}
 \begin{corollary}[Theorem of the cube]\label{Theta3IsTrivial}\citeme{Milne's Abelian Varieties chapter, Corollary 6.4 and Theorem 7.1}
 Let $A$ be an abelian variety, let $p_i: A \times A \times A \to A$ be the projection onto the $i${\th} factor, and let $p_{ij} = p_i +_A p_j$, $p_{ijk} = p_i +_A p_j +_A p_k$.  Then for any invertible sheaf $\L$ on $A$, the sheaf \[\Theta^3(\L) := \frac{p_{123}^* \L \otimes p_1^* \L \otimes p_2^* \L \otimes p_3^* \L}{p_{12}^* \L \otimes p_{23}^* \L \otimes p_{31}^* \L \otimes p_\emptyset^* \L} = \bigotimes_{I \subseteq \{1, 2, 3\}} (p_I^* \L)^{(-1)^{|I| - 1}}\] on $A \times A \times A$ is trivial.  If $\L$ is rigid, then $\Theta^3(\L)$ is canonically trivialized by a section $s(A; \L)$. \qed
 \end{corollary}
