--- a/sigma.tex
+++ b/sigma.tex
@@ -3,7 +3,7 @@
 \chapter{The \texorpdfstring{$\sigma$}{sigma}-orientation}\label{ChapterSigmaOrientation}
 
 
-\todo[inline]{Write an introduction for me.  Use unstable cooperations from Morava's theories to classical complex and real $K$--theory.}
+\todo[inline]{Write an introduction for me.  Use unstable cooperations from Morava's theories to classical complex and real $K$--theory.  Another main point of this chapter is that it invokes projective algebraic geometry: that's what the chosen isomorphism with an actual elliptic curve, rather than just some abstract formal group, is all about.}
 
 \todo[inline]{Part of the theme of this chapter should be to use the homomorphism from topological vector bundles to algebraic line bundles --- Neil's $\mathbb L$ construction --- as inspiration for what to do, given suitable algebraic background.}
 
