some unknowns to expand on later

--- a/unknowns.tex
+++ b/unknowns.tex
@@ -727,6 +727,10 @@ Hovey's paper on $v_n$--periodic elements in ring spectra.  He has a nice (and t
 
 Matt's short resolutions of chromatically localized $MU$.
 
+Nilpotency and vanishing curves in the ($MU$--)Adams spectral sequence.  The \emph{non}-nilpotency of $\eta$ in the $MU$--Adams spectral sequence.  Mathew--Meier type theorems about horizontal vanishing lines and the Tate construction (and related results about the $\TMF$ spectral sequence and the Johnson--Wilson theories).
+
+Additive degeneration and $kO \ne kU^{hC_2}$.
+
 
 
 
@@ -741,6 +745,7 @@ It is completely unclear why $MU$ plays such an important mediating role between
 For $R = \S$, this is the role that the $R$--algebra $S = MU$ and the $S$--algebras $S_d = E(d)$ play.  Finding these spectra feels like striking gold, and it is unclear how to produce analogous spectra in general.
 \todo{Mathews's work on Galois descent shows that the fixed point map $\CatOf{Modules}_{E_\Gamma, \Aut \Gamma}^{\mathrm{complete}} \to \CatOf{Spectra}_{\Gamma}$ is an equivalence of categories.}
 \end{remark}
+\noindent One can ask the same question from the geometric direction: why bordism?  Why should these spectra have these nice flatness properties?  Why should they have recognizable computational properties?  Why bordism?
 
 
 
