--- a/ass.tex
+++ b/ass.tex
@@ -1,15 +1,15 @@
-\begin{sseqdata}[
-    execute at begin node=$,execute at end node=$,
+\begin{sseqpage}[
     degree={-1}{#1},
     classes={circle,fill,inner sep=0.3ex},
     differentials={-{>[width=4]}, target anchor=-35},
-    class labels=left,
-    label distance={0.2em},
-    above left label distance={0em},
+    class labels={above left=0.2em},
+    %edge labels=description,
+    math nodes,    
     y range={0}{10},
     x range={0}{17},
     xscale=1.25,
-    name=ass
+    above left label distance={0em},
+    label distance={0.2em},
 ]
 
 \class(0,0)
@@ -92,5 +92,4 @@
 % off the page differentials
 \d2(18,4,-1)
 \d2(18,5)
-\end{sseqdata}
-\printpage[name=ass,page=0] 
+\end{sseqpage}
