include (lazy) pictures of the adams-novikov spectral sequence in Chapter 3

--- a/finite.tex
+++ b/finite.tex
@@ -232,8 +232,20 @@ Most of the homology theories we will discuss have these {\CH} and {\FH} propert
 \end{example}
 
 \begin{example}\label{ContextOfMUPExample}
-The context for $MUP$ is considerably more complicated, but Quillen's theorem can be equivalently stated as giving a description of it.  Quillen's theorem on its face gives an equivalence $\Spec MUP_0 \cong \moduli{fgl}$, but in \Cref{OrientationsOnEAndMU} we also gave a description of $\Spec MUP_0 MUP$: it is the moduli of pairs of formal group laws equipped with an invertible power series intertwining them.  Altogether, this presents $\context{MUP}$ as the moduli of formal groups: \[\context{MUP} \simeq \moduli{fg} := \moduli{fgl} \mmod \moduli{ps}^{\gpd},\] where $\moduli{ps} = \InternalEnd(\A^1)$ is the moduli of self-maps of the affine line (i.e., of power series) and $\moduli{ps}^{\gpd}$ is the multiplicative subgroup of invertible such maps.  In view of \Cref{WarningAboutStacks}, there is an important subtlety about the stack $\moduli{fg}$: an $R$--point is a functor on affines over $\Spec R$ which is locally isomorphic to a formal group, but whose local isomorphism \emph{may not patch} to give a global isomorphism.  This does not agree, a priori, with the definition of formal group given in \Cref{DefnFormalGps}, where the isomorphism witnessing a functor as a formal variety was expected to be global.  We will address this further in \Cref{CoordinatizbleFGs} below.
+The context for $MUP$ is considerably more complicated, but Quillen's theorem can be equivalently stated as giving a description of it.  Quillen's theorem on its face gives an equivalence $\Spec MUP_0 \cong \moduli{fgl}$, but in \Cref{OrientationsOnEAndMU} we also gave a description of $\Spec MUP_0 MUP$: it is the moduli of pairs of formal group laws equipped with an invertible power series intertwining them.  Altogether, this presents $\context{MUP}$ as the moduli of formal groups: \[\context{MUP} \simeq \moduli{fg} := \moduli{fgl} \mmod \moduli{ps}^{\gpd},\] where $\moduli{ps} = \InternalEnd(\A^1)$ is the moduli of self-maps of the affine line (i.e., of power series) and $\moduli{ps}^{\gpd}$ is the multiplicative subgroup of invertible such maps.  We include a picture of the $p$--localized Adams $E_2$--page in \Cref{ANSS2Figure} and \Cref{ANSS3Figure}.  In view of \Cref{WarningAboutStacks}, there is an important subtlety about the stack $\moduli{fg}$: an $R$--point is a functor on affines over $\Spec R$ which is locally isomorphic to a formal group, but whose local isomorphism \emph{may not patch} to give a global isomorphism.  This does not agree, a priori, with the definition of formal group given in \Cref{DefnFormalGps}, where the isomorphism witnessing a functor as a formal variety was expected to be global.  We will address this further in \Cref{CoordinatizbleFGs} below.
+\todo{The below sidewaysfigure could use some label realignment.}
 \end{example}
+
+\begin{sidewaysfigure}
+\centering
+\input{anss2.tex}
+\caption{A small piece of the $MU_{(2)}$--Adams spectral sequence for the sphere, beginning at the second page~\cite[pg.\ 429]{RavenelNovicesGuide}.  North-east lines denote multiplication by $\eta = \alpha_1$, north-west lines denote $d_3$--differentials, and vertical dotted lines indicate additive extensions.  Elements are labeled according to the conventions of \Cref{GreekLetterElements}, and in particular $\alpha_{i/j}$ is $2^j$--torsion.}\label{ANSS2Figure}
+\end{sidewaysfigure}
+\begin{sidewaysfigure}
+\centering
+\input{anss3.tex}
+\caption{A small piece of the $MU_{(3)}$--Adams spectral sequence for the sphere, beginning at the second page~\cite[Figure 1.2.19]{RavenelGreenBook}.  North-east lines denote multiplication by $\alpha_1$ or by $\beta_1/\alpha_1$, and north-west lines denote $d_5$--differentials.  Elements are labeled according to the conventions of \Cref{GreekLetterElements}, and in particular $\alpha_{i/j}$ is $3^j$--torsion.}\label{ANSS3Figure}
+\end{sidewaysfigure}
 
 \begin{example}\label{ContextOfMOPExample}
 The context for $MOP$, by contrast, is reasonably simple.  \Cref{CalculationOfPiStarMO} shows that the scheme $\Spec MOP_0$ classifies formal group laws over $\F_2$ which admit logarithms, so that $\context{MOP}$ consists of the groupoid of formal group laws with logarithms and isomorphisms between them.  This admits a natural deformation-retraction to the moduli consisting just of $\G_a$ and its automorphisms, expressing the redundancy in $MOP_0(X)$ encoded in the splitting of \Cref{MOSplitsIntoHF2s}.
@@ -1296,7 +1308,7 @@ More generally, different powers $v_1^j$ of the section $v_1$ also give rise to 
 The other invariant functions described in \Cref{IdIsAnInvariantIdeal} (e.g., $v_d$ modulo $I_d$) also give rise to elements in $H^*(\moduli{fg}^{\ge d}; \omega^{\otimes *})$, which map to the $BP$--Adams $E_2$--term and which sometimes survive the spectral sequence to give to homotopy elements of the generalized Moore spectra $M_0(v^I)$.  Homotopy elements arising in this way are collectively referred to as \textit{Greek letter families}~\cite[Section 3]{MRW}.
 \end{example}
 
-\begin{remark}
+\begin{remark}\label{GreekLetterElements}
 In the broader literature, the phrase ``Greek letter elements'' typically refers to the pushforward of the above elements to the homotopy groups of $\S$ by pinching to the top cell.  This is somewhat obscuring: for instance, this significantly entangles how multiplication by $\alpha_{j/k}$ behaves.  Finally, the incarnation of these element in $\G_m$--local homotopy are exactly the elements witnessed by the invariant function $u^{2(p-1)k}$ in \Cref{piLK1SExample}.
 \end{remark}
 
