--- a/main.bib
+++ b/main.bib
@@ -1255,6 +1255,21 @@ MRREVIEWER = {J. F. Adams},
 MRREVIEWER = {N. J. Kuhn},
 }
 
+@incollection {RavenelNovicesGuide,
+    AUTHOR = {Ravenel, Douglas C.},
+     TITLE = {A novice's guide to the {A}dams-{N}ovikov spectral sequence},
+ BOOKTITLE = {Geometric applications of homotopy theory ({P}roc. {C}onf.,
+              {E}vanston, {I}ll., 1977), {II}},
+    SERIES = {Lecture Notes in Math.},
+    VOLUME = {658},
+     PAGES = {404--475},
+ PUBLISHER = {Springer, Berlin},
+      YEAR = {1978},
+   MRCLASS = {55T15 (55N22 55Q45)},
+  MRNUMBER = {513586},
+MRREVIEWER = {J. F. Adams},
+}
+
 @article {RavenelWilsonHopfRingForMU,
     AUTHOR = {Ravenel, Douglas C. and Wilson, W. Stephen},
      TITLE = {The {H}opf ring for complex cobordism},
