--- a/mo.tex
+++ b/mo.tex
@@ -644,7 +644,7 @@ At the other extreme, we can pick the extremely nondegenerate case $X = \S$, whe
 \begin{sidewaysfigure}
 \centering
 \input{ass.tex}
-\caption{A small piece of the $H\F_2$--Adams spectral sequence for the sphere, beginning at the second page.  North and north-east lines denote multiplication by $2$ and by $\eta$, north-west lines denote $d_2$-- and $d_3$--differentials.}\label{HF2ASSFigure}
+\caption{A small piece of the $H\F_2$--Adams spectral sequence for the sphere, beginning at the second page~\cite[pg.\ 412]{RavenelNovicesGuide}.  North and north-east lines denote multiplication by $2$ and by $\eta$, north-west lines denote $d_2$-- and $d_3$--differentials.}\label{HF2ASSFigure}
 \end{sidewaysfigure}
 
 
