fix a capitalization error in the bibliography

--- a/main.bib
+++ b/main.bib
@@ -528,7 +528,7 @@ MRREVIEWER = {Harold Hastings},
 % this could be updated
 @ARTICLE{HedayatzadehGeneralCase,
   author = {Hedayatzadeh, S. Mohammad Hadi},
-  title = {Exterior powers of Lubin--Tate groups},
+  title = {Exterior powers of {L}ubin--{T}ate groups},
   note = {\url{http://hedayatzadeh.info/Home_files/EPLTG.pdf}, Accessed: 2015-01-09}
 }
 
