fix a minor typo that was preventing compilation

--- a/unknowns.tex
+++ b/unknowns.tex
@@ -555,7 +555,7 @@ Now, apply the genuine $G$-equivariant Chern character to the $K_G$ factor to ge
 
 \todo{pp.\ 42-43 of FPFP has some easy-to-state results about this collected.}
 \todo{Kohlhaase~\cite{Kohlhaase} references Yu~\cite{Yu} for having closed formulas generalizing the Hopkins--Gross example section.}
-\todo{Section 2.3 (pg.\ 35--36) of Morava's \texti{Noetherian Localisations} gives a sketch of the period map (in terms of curves, I guess).}
+\todo{Section 2.3 (pg.\ 35--36) of Morava's \textit{Noetherian Localisations} gives a sketch of the period map (in terms of curves, I guess).}
 
 Describe Dieudonn\'e crystals and the Tapis de Cartier.
 
