forward reference to the homological algebra of hope algebroids

--- a/mo.tex
+++ b/mo.tex
@@ -498,7 +498,7 @@ The $0$--line of the Adams spectral sequence consists of exactly those elements 
 For the rest of the section, we will focus on the algebraic input ``$\Ext_{\mathcal A_*}^{*, *}(\F_2, H\F_{2*} X)$'', which will require us to grapple with the homological algebra of comodules for a Hopf algebra.  To start that discussion, it's both reassuring and instructive to see that homological algebra can, in fact, even be done with comodules.  In the usual development of homological algebra for \emph{modules}, the key observations are the existence of projective and injective modules, and there is something at work similar here.
 
 \begin{remark}[{\cite[Appendix A1]{RavenelGreenBook}}]
-Much of the results below do not rely on working with a Hopf algebra over the field $k = \F_2$.  In fact, $k$ can usually be taken to be a ring rather than a field. More generally, the theory goes through in the context of comodules over flat Hopf algebroids.
+Much of the results below do not rely on working with a Hopf algebra over the field $k = \F_2$.  In fact, $k$ can usually be taken to be a ring rather than a field. More generally, the theory goes through in the context of comodules over flat Hopf algebroids, cf.\ also \Cref{IdentifyingAdamsE2Page}.
 \end{remark}
 
 \begin{lemma}[{\cite[Definition A1.2.1]{RavenelGreenBook}}]
