--- a/conventions.tex
+++ b/conventions.tex
@@ -1,6 +1,6 @@
 % -*- root: main.tex -*-
 
-\section*{Conventions}
+\section{Conventions}
 
 Throughout this book, we use the following conventions:
 
